--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <title>Document</title>
 </head>
 <body>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+        <script src="vue.js"></script>
         
         <div id="app">
                 <p>{{message}}</p>
+                <button v-on:click="reverse">reverse message</button>
         </div>
         
         <script>
@@ -17,6 +18,11 @@
                         el:"#app",
                         data: {
                                 message: "HelloWold!"
+                        },
+                        methods: {
+                                reverse: function() {
+                                        this.message = this.message.split("").reverse().join("")
+                                }
                         }
                 })
         </script>
