--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
         <script src="vue.js"></script>
         
         <div id="app">
-                <p>{{message}}</p>
+                <p v-once>{{message}}</p>
                 <button v-on:click="reverse">reverse message</button>
+                <p>{{ sayHi() }}</p>
+                <!-- <a v-bind:href="url">Google</a> -->
+                <a :[attribute]="url">Google</a>
+                <a v-bind="{href: urlTwitter, id: number}">Twitter</a>
         </div>
         
         <script>
                 new Vue({
                         el:"#app",
                         data: {
-                                message: "HelloWold!"
+                                message: "HelloWold!",
+                                url: "https://google.com",
+                                urlTwitter:"https://twitter.com",
+                                number: 31,
+                                attribute: "href"
                         },
                         methods: {
                                 reverse: function() {
                                         this.message = this.message.split("").reverse().join("")
+                                },
+                                sayHi(){
+                                        this.message = "Hello VueJS"
+                                        return "Hi"
                                 }
                         }
                 })
