developブランチ作成

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 new Vue({
                         el:"#app",
                         data: {
-                                message: "HelloWold!",
+                                message: "HelloWold!!",
                                 url: "https://google.com",
                                 urlTwitter:"https://twitter.com",
                                 number: 31,
